# instachecker

./: .gitignore  checker.py  config.py  handlers.py  models.py  package-lock.json  package.json  pyproject.toml  serverless.yml
confs/: store-config.example.yml  users-config.example.yml
instachecker/: checker.py  config.py  constants.py  handlers.py  models.py  notifier.py  status.py  users.py
